@@ -1,4 +1,5 @@
 .*.sw[pon]
 .rvmrc
 Gemfile.lock
+coverage
 pkg
