@@ -1,3 +1,3 @@
-rvm use ruby-1.9.3-rc1
+rvm use ruby-1.9.3
 rvm gemset create dslkit
 rvm gemset use dslkit
