@@ -9,7 +9,7 @@ internal Domain Specific Languages (DSL) in Ruby.
 
 Florian Frank <mailto:flori@ping.de>
 
-== License 
+== License
 
 This is free software; you can redistribute it and/or modify it under the
 terms of the GNU General Public License Version 2 as published by the Free
