@@ -1,6 +1,6 @@
 # vim: ts=2 sw=2 et ft=ruby
 # Call with two [ab]* strings on the tapes:
-# $ turing.rb prefix-equals-suffix-reversed-with-infix.stm ab ababab 
+# $ turing.rb prefix-equals-suffix-reversed-with-infix.stm ab ababab
 
  1. right 1,  :goto => 2
  2. right 2,  :goto => 3
