@@ -1,3 +1,5 @@
+2012-01-12 (0.2.10)
+ * Add module for rails-style concerns.
 2011-10-07 (0.2.9)
  * Add ParameterizedModule and FromModule.
 2011-09-26 (0.2.8)
